--- a/indet.html
+++ b/indet.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h2>Prubas de color</h2>
+    <h3>Vamos a ver si esto tambien se guarda</h3>
+    <h4>se trabo git</h4>
+    <h5>vamos a ver</h5>
 </body>
 </html>
