agregre pag css

--- a/indet.html
+++ b/indet.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="style.css" href="./style.css" />
     <title>Document</title>
 </head>
 <body>
@@ -10,5 +11,6 @@
     <h3>Vamos a ver si esto tambien se guarda</h3>
     <h4>se trabo git</h4>
     <h5>vamos a ver</h5>
+    <h6> WOOOOOW si funciona</h6>
 </body>
 </html>
