--- a/index.html
+++ b/index.html
@@ -7,10 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Prubas de color</h2>
-    <h3>Vamos a ver si esto tambien se guarda</h3>
-    <h4>se trabo git</h4>
-    <h5>vamos a ver</h5>
-    <h6> WOOOOOW si funciona</h6>
+    <div class="container">
+    <h2>este es mi titulo</h2>
+    </div>
+
+    <div>
+    <h2 class"subtitle">esto es otra cosa</h2>
+    </div>
+
+    <div class="container-card">
+        <div class="card">
+            <h4 class="title">title 1</h4>
+            <h4 class="price">Price 100</h4>
+        </div>
+        <div class="card">
+            <h4 class="title">title 2</h4>
+            <h4 class="price">Price 100</h4>
+        </div>
+        <div class="card-distinta">
+            <h4 class="title">title 3</h4>
+            <h4 class="price">Price 100</h4>
+        </div>
+
+        <div class="container-buttons">
+            <button>uno</button>
+            <button>dos</button>
+            <button>tres</button>
+            <button>cuatro</button>
+            <button>cinco</button>        
+        </div>
+</div>
+
 </body>
 </html>
